--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@stripe/stripe-js": "^2.1.11",
+    "@supabase/auth-helpers-nextjs": "^0.8.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.38.4",
+    "ini": "^4.1.1",
+    "next": "14.0.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
+    "stripe": "^14.2.0",
+    "tailwind-merge": "^2.0.0",
+    "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uniqid": "^5.3.3",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "supabase": "^1.110.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.2"
   }
 }
